<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:paddingVertical="@dimen/_20sdp"
    android:paddingHorizontal="@dimen/_15sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_logout"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/ic_cancel_bg"
            android:gravity="center"
            android:paddingVertical="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_7sdp"/>

        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/blue_pdam"
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/ic_logout_bg"
            android:gravity="center"
            android:paddingVertical="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_7sdp"/>

    </LinearLayout>

</LinearLayout>