<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_text_input"
    android:layout_marginVertical="@dimen/_8sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingVertical="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/lay_name_cust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_cust"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            tools:text="@string/name_cust"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/poppins_regular"
            tools:text="@string/id_examples"
            android:textColor="@color/blue_pdam"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay_name_cust"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/poppins_regular"
        tools:text="@string/phone_examples"
        android:textColor="@color/grey"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_marginTop="@dimen/_3sdp"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            tools:text="@string/location"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10sdp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:layout_marginTop="@dimen/_3sdp"/>

    </LinearLayout>

</RelativeLayout>