<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.ChangePasswordSuccess"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_approve"
            android:layout_marginTop="@dimen/_25sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:layout_marginTop="@dimen/_25sdp"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/blue_pdam"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/success_msg2"
            android:layout_marginTop="@dimen/_25sdp"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"/>


        <TextView
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_btn"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14sdp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>