<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.HistoryDetail"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/lay_back"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/name_cust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        tools:text="@string/name_cust"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/lay_back"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_cust"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/poppins_regular"
        tools:text="@string/id_examples"
        android:textColor="@color/blue_pdam"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/name_cust"
        android:layout_marginHorizontal="@dimen/_15sdp"/>

    <LinearLayout
        android:id="@+id/lay_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintTop_toBottomOf="@+id/id"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_marginTop="@dimen/_3sdp"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            tools:text="@string/location"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/grey_sub"
        app:layout_constraintTop_toBottomOf="@id/lay_location" />

    <TextView
        android:id="@+id/history_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/history_payment"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history_payment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/history_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_history_payment"/>

</androidx.constraintlayout.widget.ConstraintLayout>