<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".page.PdamInformationDetail">

    <RelativeLayout
        android:id="@+id/lay_back"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/PDAM_information"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lay_back"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_location_dummy"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/ImageViewRounded" />

            <TextView
                android:id="@+id/name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name_cust"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/img_detail" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/id_examples"
                android:textColor="@color/grey_sub"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/name_title" />

            <TextView
                android:id="@+id/date_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/location"
                android:textColor="@color/blue_pdam"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/desc" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/blue_ecomplain"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/date_release">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/semi_black"
                    android:textSize="@dimen/_10sdp" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>