<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_text_input"
    android:layout_marginVertical="@dimen/_8sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingVertical="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/lay_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pin"/>

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/name_cust"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_10sdp"/>

                <ImageView
                    android:id="@+id/ic_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/icn_delete_white"
                    app:tint="@color/semi_black" />


            </LinearLayout>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/id_examples"
                android:textColor="@color/grey"
                android:textSize="@dimen/_10sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_release"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/location"
                    android:textColor="@color/blue_pdam"
                    android:textSize="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/ic_next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/ic_next" />

            </LinearLayout>

        </LinearLayout>

</RelativeLayout>